apps/default/home-assistant/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: home-assistant
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  ingress:
  - from:
    # Allow homematic ingress from K8S
    - ipBlock:
        cidr: "10.0.0.0/8"
    # Allow homematic ingress from lan
    - ipBlock:
        cidr: "192.0.0.0/8"
  policyTypes:
  - Ingress
